--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-
-
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
 
 
 </head>
-<body>
+<body style="margin-block-end: 40px;">
 <div th:replace="layouts/logo :: logo"></div>
 <!--header.html  that's here  -->
 <div th:replace="layouts/header :: header"></div>
