--- a/src/main/resources/templates/home/about.html
+++ b/src/main/resources/templates/home/about.html
@@ -9,8 +9,8 @@
 <div layout:fragment="content" class="container">
 
     <div class="jumbotron">
-        <h1 style="text-align: center;">ABOUT TEST 2022-07-15</h1>
-        <p>Allows to add people.</p>
+        <h1 style="text-align: center;">------------ PECUNIA SPRING 2022-07-29 -------------</h1>
+        <p>Wersja 4 Aplikacji </p>
         <p>
             <!--            <a class="btn btn-lg btn-primary" th:href="@{/country}" role="button">See people list</a>-->
         </p>
