--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -58,17 +58,24 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <div sec:authorize="isAuthenticated()" style="text-align: center;">
+                        <h1 class="modal-title" id="exampleModalLabel" sec:authentication="principal.authorities[0]">Roles</h1>
+                    </div>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <h1>TEST MODAL</h1>
+                    <div sec:authorize="isAuthenticated()">
+                        <span>ROLE - </span><span sec:authentication="principal.authorities[0]">Roles</span><br>
+                        <span>First Name - </span><span sec:authentication="principal.firstName">Firstname</span><br>
+                        <span>Last Name - </span><span sec:authentication="principal.lastName">Lastname</span><br>
+                        <span>Mail - </span><span sec:authentication="principal.email">email</span><br>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+<!--                    <button type="button" class="btn btn-primary">Save changes</button>-->
                 </div>
             </div>
         </div>
