--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -10,6 +10,7 @@
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">COUNTRY</h1>
 
+        <a th:href="@{/country/new}" class="btn btn-sm btn-primary">Add new Country</a>
         <table class="table table-striped table-bordered table-hover table-sm">
             <thead class="thead-dark">
             <tr>
