--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -21,7 +21,9 @@
 
 <div class="container">
 
-    <h1>ERROR</h1>
+    <h1 style="text-align: center">ERROR</h1>
+    <h2 th:text="${error}"></h2>
+
 </div>
 <div layout:fragment="content"></div>
 <!--footer.html  that's here  -->
