--- a/src/main/resources/templates/country/show.html
+++ b/src/main/resources/templates/country/show.html
@@ -10,9 +10,9 @@
 <div layout:fragment="content" class="container">
     <h1 style="text-align: center">COUNTRY SHOW</h1>
 
-    <p th:text="${country}"></p>
-<!--    <img class="flag" th:src="'/images/flags/' + ${country.country_en} +'.png'">-->
+<!--    <p th:text="${country}"></p>-->
     <h2 th:text="${country.get.getCountry_en}"></h2>
+    <textarea th:text="${json}" rows="15" cols="33" style="font-family: inherit;" th:readonly="System"></textarea><br>
     <img th:src="@{'/images/flags/' + ${country.get.getCountry_en} + '.png'}"/>
 
 </div>
