Dodano testowe logo do strony logowania

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,6 +20,7 @@
 <body>
 
 <div class="container">
+    <img src="images/pecunia.png" style="width: 100px"/>
 
     <h2 style="text-align: center">Logowanie</h2>
 
