--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -45,11 +45,18 @@
                 <div class="col-sm-2">
                     Total Rows: [[${totalItems}]]
                 </div>
-                <div class="col-sm-1"></div>
-                <div class="col-sm-1"></div>
+                <div class="col-sm-10">
+                    <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+                        <a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}} ">[[${i}]]</a>
+                        <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
+                    </span>
+                </div>
+                <div class="col-sm-1">
+                    <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}} ">NEXT</a>
+                    <span th:unless="${currentPage < totalPages}">NEXT</span>
+                </div>
             </div>
-            <h2>TEST</h2>
-            <p th:text="${totalPages}"></p>
+
 
         </div>
     </div>
