Pagination country testy Sortowanie w tabeli pop przez kontynenty i państwa TESTY 003

--- a/src/main/resources/templates/country/new.html
+++ b/src/main/resources/templates/country/new.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <td>Country En</td>
-                <td><input class="input" type="text" th:field="*{country_en}" placeholder="First Name"/></td>
+                <td><input class="input" type="text" th:field="*{countryEn}" placeholder="First Name"/></td>
             </tr>
             <tr>
                 <td>Country Pl</td>
