--- a/src/main/resources/templates/country/pagin.html
+++ b/src/main/resources/templates/country/pagin.html
@@ -27,7 +27,7 @@
                 <tr>
                     <td th:text="${country.id}" class="pt-1 pb-1"></td>
                     <td th:text="${country.continent}" class="pt-1 pb-1"></td>
-                    <td th:text="${country.country_en}" class="pt-1 pb-1"></td>
+                    <td th:text="${country.countryEn}" class="pt-1 pb-1"></td>
                     <td th:text="${country.country_pl}" class="pt-1 pb-1"></td>
                     <td th:text="${country.capital_city}" class="pt-1 pb-1"></td>
                     <td class="pt-1 pb-1">
