--- a/src/main/resources/templates/country/show.html
+++ b/src/main/resources/templates/country/show.html
@@ -11,12 +11,12 @@
     <h1 style="text-align: center">COUNTRY SHOW</h1>
 
 <!--    <p th:text="${country}"></p>-->
-    <h2 th:text="${country.get.getCountry_en}"></h2>
+    <h2 th:text="${country.get.getCountryEn}"></h2>
     <div style="float: left">
         <textarea th:text="${json}" rows="15" cols="33" style="font-family: inherit; resize: none; color: black" disabled></textarea><br>
     </div>
     <div>
-        <img th:src="@{'/images/flags/' + ${country.get.getCountry_en} + '.png'}" style="width: 150px"/>
+        <img th:src="@{'/images/flags/' + ${country.get.getCountryEn} + '.png'}" style="width: 150px"/>
     </div>
 
 </div>
