--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       layout:decorate="~{layouts/layout}">
@@ -15,8 +15,14 @@
             <thead class="thead-dark">
             <tr>
                 <th>ID</th>
-                <th>Continent</th>
-                <th>Country EN</th>
+<!--                <th>Continent</th>-->
+                <th>
+                    <a th:href="@{'/page/' + ${currentPage} + '?sortField=continent&sortDir=' + ${reverseSortDir}}">Continent</a>
+                </th>
+<!--                <th>Country EN</th>-->
+                <th>
+                    <a th:href="@{'/page/' + ${currentPage} + '?sortField=countryEn&sortDir=' + ${reverseSortDir}}">Country EN</a>
+                </th>
                 <th>Country PL</th>
                 <th>Capital City</th>
                 <th>Akcja</th>
@@ -27,7 +33,7 @@
                 <tr>
                     <td th:text="${country.id}" class="pt-1 pb-1"></td>
                     <td th:text="${country.continent}" class="pt-1 pb-1"></td>
-                    <td th:text="${country.country_en}" class="pt-1 pb-1"></td>
+                    <td th:text="${country.countryEn}" class="pt-1 pb-1"></td>
                     <td th:text="${country.country_pl}" class="pt-1 pb-1"></td>
                     <td th:text="${country.capital_city}" class="pt-1 pb-1"></td>
                     <td class="pt-1 pb-1">
@@ -45,15 +51,19 @@
                 <div class="col-sm-2">
                     Total Rows: [[${totalItems}]]
                 </div>
-                <div class="col-sm-10">
+                <div class="col-sm-15">
                     <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-                        <a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}} ">[[${i}]]</a>
+                        <a th:if="${currentPage != i}" th:href="@{'/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">[[${i}]]</a>
                         <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
                     </span>
                 </div>
                 <div class="col-sm-1">
-                    <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}} ">NEXT</a>
+                    <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">NEXT</a>
                     <span th:unless="${currentPage < totalPages}">NEXT</span>
+                </div>
+                <div class="col-sm-1">
+                    <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">Last</a>
+                    <span th:unless="${currentPage < totalPages}">Last</span>
                 </div>
             </div>
 
