Pagination bootstrap 4.6 poprawki

--- a/src/main/resources/templates/country/_form.html
+++ b/src/main/resources/templates/country/_form.html
@@ -1,4 +1,4 @@
-<header th:fragment="logo"
+<header th:fragment="form"
     xmlns:th="http://www.thymeleaf.org">
     <table>
         <!--            <input class="input" type="hidden" th:field="*{created_at}" readonly/>-->
