--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -27,7 +27,7 @@
                 <th>Country PL</th>
                 <th>Capital City</th>
                 <th>Description</th>
-                <th>Akcja</th>
+                <th style="width: 156px">Akcja</th>
             </tr>
             </thead>
             <tbody>
