Nowe logo testy poprawki

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,9 @@
 <body>
 
 <div class="container">
-    <img src="images/pecunia.png" style="width: 100px"/>
+    <div style="text-align: center">
+        <img src="images/logo2.png" style="width: 20%"/>
+    </div>
 
     <h2 style="text-align: center">Logowanie</h2>
 
