--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,9 +21,9 @@
 
 <div class="container">
     <div style="text-align: center">
-        <img src="images/logo2.png" style="width: 20%"/>
+        <img src="images/pecunia.png" style="width: 100px"/>
+        <img src="images/logo2.png" style="width: 15%"/>
     </div>
-
     <h2 style="text-align: center">Logowanie</h2>
 
     <div class="container form-group col-md-4 col-md-offset-3">
