--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -50,7 +50,7 @@
             </tbody>
         </table>
 
-        <div th:replace="fragments/_paginationB :: paginationB"></div>
+        <div th:replace="fragments/_pagination :: pagination"></div>
     </div>
 </body>
 </html>
