--- a/src/main/resources/templates/fragments/_pagination.html
+++ b/src/main/resources/templates/fragments/_pagination.html
@@ -1,27 +1,25 @@
 <div th:fragment="pagination"
      xmlns:th="http://www.w3.org/1999/xhtml">
 
-    <div th:if = "${totalPages > 1}">
-        <div class="row col-sm-10">
-            <div class="col-sm-2">
-                Total Rows: [[${totalItems}]]
-            </div>
-            <div class="col-sm-15">
-                    <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-                        <a th:if="${currentPage != i}" th:href="@{${pathPage} + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">[[${i}]]</a>
-                        <span th:unless="${currentPage != i}">[[${i}]]</span>
-                        <!--                        &nbsp; &nbsp;-->
-                    </span>
-            </div>
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{${pathPage}  + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">NEXT</a>
-                <span th:unless="${currentPage < totalPages}">NEXT</span>
-            </div>
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{${pathPage}  + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">Last</a>
-                <span th:unless="${currentPage < totalPages}">Last</span>
-            </div>
-        </div>
-    </div>
-
+    <nav aria-label="Page navigation example">
+        <ul class="pagination pagination-sm">
+            <li class="page-item" >
+                <span class="page-link" style="background: black"> Total Rows: [[${totalItems}]]</span>
+            </li>
+            <li class="page-item">
+                <a class="page-link" style="background: black"  th:if="${currentPage > 1}" th:href="@{${pathPage}  + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">PREV</a>
+                <span class="page-link" aria-current="page" style="background: darkgray" th:unless="${currentPage > 1}">Prev</span>
+            </li>
+            <block th:each="i: ${#numbers.sequence(1, totalPages)}">
+                <li class="page-item">
+                    <a class="page-link active" th:if="${currentPage != i}" th:href="@{${pathPage} + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">[[${i}]]</a>
+                    <span class="page-link" aria-current="page" style="background: aqua" th:unless="${currentPage != i}">[[${i}]]</span>
+                </li>
+            </block>
+            <li class="page-item">
+                <a class="page-link" style="background: black"  th:if="${currentPage < totalPages}" th:href="@{${pathPage}  + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}} ">NEXT</a>
+                <span class="page-link" aria-current="page" style="background: darkgray" th:unless="${currentPage < totalPages}">Next</span>
+            </li>
+        </ul>
+    </nav>
 </div>
