--- a/src/main/resources/templates/home/about.html
+++ b/src/main/resources/templates/home/about.html
@@ -8,6 +8,10 @@
 <body>
 <div layout:fragment="content" class="container">
 
+    <div class="container" style="text-align: center">
+        <img src="images/pecunia.png" style="width: 100px"/>
+        <img src="images/logo2.png" style="width: 15%"/>
+    </div>
     <div class="jumbotron">
         <h1 style="text-align: center;">------------ PECUNIA SPRING 2022-07-29 -------------</h1>
         <p>Wersja 4 Aplikacji </p>
