--- a/src/main/resources/templates/home/about.html
+++ b/src/main/resources/templates/home/about.html
@@ -21,6 +21,7 @@
             <!--            <a class="btn btn-lg btn-primary" th:href="@{/country}" role="button">See people list</a>-->
         </p>
         <h5>Test Git Lab ferst commit</h5>
+        <b>poprawki testy</b>
     </div>
 </div>
 </body>
