--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -24,7 +24,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 <!--                        <a class="dropdown-item" th:href="@{/country}">Continent</a>-->
 <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
-                        <a class="dropdown-item" href="#">Kontynenty</a>
+                        <a class="dropdown-item" th:href="@{/continent}">Kontynenty</a>
                         <a class="dropdown-item" th:href="@{/country}">Państwa</a>
                         <a class="dropdown-item" th:href="@{/test}">TEST</a>
 
