Dodano wyświetlanie państw z danego kontynentu inne poprawki

--- a/src/main/resources/templates/country/_form.html
+++ b/src/main/resources/templates/country/_form.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
             <td>Country Pl</td>
-            <td><input class="input" type="text" th:field="*{country_pl}" placeholder="First Name"/></td>
+            <td><input class="input" type="text" th:field="*{countryPl}" placeholder="First Name"/></td>
         </tr>
         <tr>
             <td>Capital City</td>
