--- a/src/main/resources/templates/continent/index.html
+++ b/src/main/resources/templates/continent/index.html
@@ -9,6 +9,7 @@
 <body>
     <div layout:fragment="content" class="container">
         <h1 style="text-align: center">CONTINENT</h1>
+        test
         <a th:href="@{/continent/new}" class="btn btn-sm btn-primary">Add new Continent</a>
 
         <div class="container">
