poprawki w kodzie dodanie dto w trakcie poprawkek edycji państwa

--- a/src/main/resources/templates/country/show.html
+++ b/src/main/resources/templates/country/show.html
@@ -14,6 +14,7 @@
     <h2 th:text="${country.getCountryEn}"></h2>
     <div style="float: left">
         <textarea th:text="${json}" rows="15" cols="33" style="font-family: inherit; resize: none; color: black" disabled></textarea><br>
+<!--        <p th:text="${country.countryPl}"></p>-->
     </div>
     <div>
         <img th:src="@{'/images/flags/' + ${country.getCountryEn} + '.png'}" style="width: 150px"/>
