--- a/src/main/resources/templates/continent/country.html
+++ b/src/main/resources/templates/continent/country.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-        <h1 style="text-align: center">country</h1>
+        <div class="container" style="text-align: center; margin-top: 15px">
+            <img th:src="@{'/images/continents/' + ${countries.get(0).getContinents().getContinentCode()} + '.png'}" style="width: 100px"/><br>
+            <h1>country</h1>
+        </div>
+
         <div class="container">
             <div class="row">
                 <Block th:each="country : ${countries}">
