--- a/src/main/resources/templates/country/_form.html
+++ b/src/main/resources/templates/country/_form.html
@@ -8,6 +8,18 @@
         <!--                <td><input class="input" type="number" th:field="*{id}" readonly/></td>-->
         <!--            </tr>-->
         <tr>
+            <td>Id continent</td>
+            <td>
+                <select th:field="*{continent_id}">
+                    <option th:each="continent : ${continents}"
+                            th:value="${continent.id}"
+                            th:text="${continent.continentPl}">
+                        Address
+                    </option>
+                </select>
+            </td>
+        </tr>
+        <tr>
             <td>Continent</td>
             <td><input class="input" type="text" th:field="*{continent}" placeholder="First Name"/></td>
         </tr>
