--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -14,6 +14,7 @@
         <table class="table table-striped table-bordered table-hover table-sm">
             <thead class="thead-dark">
             <tr>
+<!--                <th>CON</th>-->
                 <th>Lp:</th>
                 <th>ID</th>
 <!--                <th>Continent</th>-->
@@ -33,6 +34,7 @@
             <tbody>
             <Block th:each="country, i : ${countries}">
                 <tr>
+<!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
                     <td th:text="${(i.index + 1) + (pageSize * (currentPage - 1))}"></td>
                     <td th:text="${country.id}" class="pt-1 pb-1"></td>
                     <td th:text="${country.continent}" class="pt-1 pb-1"></td>
