--- a/src/main/resources/templates/country/new.html
+++ b/src/main/resources/templates/country/new.html
@@ -13,6 +13,19 @@
     <form th:action="@{/country/new}" method="post" th:object="${countryForm}">
         <table>
             <tr>
+                <td>Id continent</td>
+                <td>
+                    <select th:field="*{continent_id}">
+                        <option value="Europa">SELECT CONTINENT</option>
+                        <option th:each="continent : ${continents}"
+                                th:value="${continent.id}"
+                                th:text="${continent.continentPl}">
+                            Address
+                        </option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
                 <td>Continent</td>
                 <td><input class="input" type="text" th:field="*{continent}" placeholder="First Name"/></td>
             </tr>
