--- a/src/main/resources/templates/country/_form.html
+++ b/src/main/resources/templates/country/_form.html
@@ -2,26 +2,22 @@
     xmlns:th="http://www.thymeleaf.org">
     <p th:text="${continentEdit.continentPl}">></p>
     <p th:text="${continentEdit.id}"></p>
+<!--    <input class="input" type="text" th:field="*{id}" th:readonly="id" th:type="hidden"/>-->
+<!--    <input class="input" type="text" th:field="*{created_at}" th:readonly="created_at"/>-->
+<!--    <input class="input" type="text" th:field="*{updated_at}" th:readonly="updated_at"/>-->
     <table>
-        <!--            <input class="input" type="hidden" th:field="*{created_at}" readonly/>-->
-        <!--            <input class="input" type="hidden" th:field="*{updated_at}" readonly/>-->
-        <!--            <tr>-->
-        <!--                <td>Id</td>-->
-        <!--                <td><input class="input" type="number" th:field="*{id}" readonly/></td>-->
-        <!--            </tr>-->
         <tr>
             <td>Id continent</td>
             <td>
                 <select th:field="*{continent_id}">
-
                     <option th:each="continent : ${continents}"
                             th:value="${continent.id}"
-                            th:text="${continent.continentPl} + ${continent.id.toString}">
+                            th:text="${continent.continentPl}">
                         Address
                     </option>
-                    <option th:value="${continentEdit.id}"
-                            th:text="${continentEdit.id}">
-                    </option>
+<!--                    <option th:value="${continentEdit.id}"-->
+<!--                            th:text="${continentEdit.continentPl}">-->
+<!--                    </option>-->
                 </select>
             </td>
         </tr>
