Poprawki Dodawanie I edycji Państwa

--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -17,6 +17,7 @@
 <!--                <th>CON</th>-->
                 <th>Lp:</th>
                 <th>ID</th>
+                <th>Con</th>
 <!--                <th>Continent</th>-->
                 <th>
                     <a th:href="@{'/page/' + ${currentPage} + '?sortField=continent&sortDir=' + ${reverseSortDir}}">Continent</a>
@@ -37,6 +38,7 @@
 <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
                     <td th:text="${(i.index + 1) + (pageSize * (currentPage - 1))}"></td>
                     <td th:text="${country.id}" class="pt-1 pb-1"></td>
+                    <td th:text="${country.continents.continentPl}" class="pt-1 pb-1"></td>
                     <td th:text="${country.continent}" class="pt-1 pb-1"></td>
                     <td th:text="${country.countryEn}" class="pt-1 pb-1"></td>
                     <td th:text="${country.countryPl}" class="pt-1 pb-1"></td>
