--- a/src/main/resources/templates/country/_form.html
+++ b/src/main/resources/templates/country/_form.html
@@ -9,7 +9,7 @@
         <tr>
             <td>Id continent</td>
             <td>
-                <select th:field="*{continent_id}">
+                <select th:field="*{continents.id}">
                     <option th:each="continent : ${continents}"
                             th:value="${continent.id}"
                             th:text="${continent.continentPl}">
