--- a/src/main/resources/templates/country/new.html
+++ b/src/main/resources/templates/country/new.html
@@ -24,30 +24,32 @@
                         </option>
                     </select>
                 </td>
+                <td  th:if="${#fields.hasErrors('continents.id')}" th:errors="*{continents.id}" style="color: red"></td>
             </tr>
             <tr>
                 <td>Continent</td>
-                <td><input class="input" type="text" th:field="*{continent}" placeholder="First Name"/></td>
+                <td><input class="input" type="text" th:field="*{continent}" placeholder="Continent"/></td>
             </tr>
             <tr>
                 <td>Country En</td>
-                <td><input class="input" type="text" th:field="*{countryEn}" placeholder="First Name"/></td>
+                <td><input class="input" type="text" th:field="*{countryEn}" placeholder="Continent En"/></td>
+                <td  th:if="${#fields.hasErrors('countryEn')}" th:errors="*{countryEn}" style="color: red">></td>
             </tr>
             <tr>
                 <td>Country Pl</td>
-                <td><input class="input" type="text" th:field="*{countryPl}" placeholder="First Name"/></td>
+                <td><input class="input" type="text" th:field="*{countryPl}" placeholder="Continent Pl"/></td>
             </tr>
             <tr>
                 <td>Capital City</td>
-                <td><input class="input" type="text" th:field="*{capital_city}" placeholder="First Name"/></td>
+                <td><input class="input" type="text" th:field="*{capital_city}" placeholder="Capital City"/></td>
             </tr>
             <tr>
                 <td>Alfa 2</td>
-                <td><input class="input" type="text" th:field="*{alfa_2}" placeholder="First Name"/></td>
+                <td><input class="input" type="text" th:field="*{alfa_2}" placeholder="ALFA 2"/></td>
             </tr>
             <tr>
                 <td>Alfa 3</td>
-                <td><input class="input" type="text" th:field="*{alfa_3}" placeholder="First Name"/></td>
+                <td><input class="input" type="text" th:field="*{alfa_3}" placeholder="ALFA 3"/></td>
             </tr>
             <tr>
                 <td>Numeric Code</td>
@@ -59,13 +61,13 @@
             </tr>
             <tr>
                 <td>Exist</td>
-                <td><input class="input" type="checkbox" th:field="*{exists}" placeholder="First Name"/></td>
+                <td><input class="input" type="checkbox" th:field="*{exists}" placeholder="Numeric Code"/></td>
             </tr>
             <tr>
                 <td>Description</td>
                 <td>
                     <div>
-                        <textarea class="input" th:field="*{description}" placeholder="First Name"></textarea>
+                        <textarea class="input" th:field="*{description}" placeholder="Description"></textarea>
                     </div>
                 </td>
             </tr>
