--- a/src/main/resources/templates/country/new.html
+++ b/src/main/resources/templates/country/new.html
@@ -38,22 +38,27 @@
             <tr>
                 <td>Country Pl</td>
                 <td><input class="input" type="text" th:field="*{countryPl}" placeholder="Continent Pl"/></td>
+                <td  th:if="${#fields.hasErrors('countryPl')}" th:errors="*{countryPl}" style="color: red">></td>
             </tr>
             <tr>
                 <td>Capital City</td>
                 <td><input class="input" type="text" th:field="*{capital_city}" placeholder="Capital City"/></td>
+                <td  th:if="${#fields.hasErrors('capital_city')}" th:errors="*{capital_city}" style="color: red">></td>
             </tr>
             <tr>
                 <td>Alfa 2</td>
                 <td><input class="input" type="text" th:field="*{alfa_2}" placeholder="ALFA 2"/></td>
+                <td  th:if="${#fields.hasErrors('alfa_2')}" th:errors="*{alfa_2}" style="color: red">></td>
             </tr>
             <tr>
                 <td>Alfa 3</td>
                 <td><input class="input" type="text" th:field="*{alfa_3}" placeholder="ALFA 3"/></td>
+                <td  th:if="${#fields.hasErrors('alfa_3')}" th:errors="*{alfa_3}" style="color: red">></td>
             </tr>
             <tr>
                 <td>Numeric Code</td>
                 <td><input class="input" type="text" th:field="*{numeric_code}" placeholder="First Name"/></td>
+                <td  th:if="${#fields.hasErrors('numeric_code')}" th:errors="*{numeric_code}" style="color: red">></td>
             </tr>
             <tr>
                 <td>ISO Code</td>
