--- a/src/main/resources/templates/country/_form.html
+++ b/src/main/resources/templates/country/_form.html
@@ -1,7 +1,5 @@
 <header th:fragment="form"
     xmlns:th="http://www.thymeleaf.org">
-    <p th:text="${continentEdit.continentPl}">></p>
-    <p th:text="${continentEdit.id}"></p>
 <!--    <input class="input" type="text" th:field="*{id}" th:readonly="id" th:type="hidden"/>-->
 <!--    <input class="input" type="text" th:field="*{created_at}" th:readonly="created_at"/>-->
 <!--    <input class="input" type="text" th:field="*{updated_at}" th:readonly="updated_at"/>-->
@@ -10,44 +8,51 @@
             <td>Id continent</td>
             <td>
                 <select th:field="*{continents.id}">
+                    <span th:if="*{continents.id == null}">
+                        <option value="">SELECT CONTINENT</option>
+                    </span>
                     <option th:each="continent : ${continents}"
                             th:value="${continent.id}"
                             th:text="${continent.continentPl}">
                         Address
                     </option>
-<!--                    <option th:value="${continentEdit.id}"-->
-<!--                            th:text="${continentEdit.continentPl}">-->
-<!--                    </option>-->
                 </select>
             </td>
+            <td  th:if="${#fields.hasErrors('continents.id')}" th:errors="*{continents.id}" style="color: red"></td>
         </tr>
         <tr>
             <td>Continent</td>
-            <td><input class="input" type="text" th:field="*{continent}" placeholder="First Name"/></td>
+            <td><input class="input" type="text" th:field="*{continent}" placeholder="Continent"/></td>
         </tr>
         <tr>
             <td>Country En</td>
-            <td><input class="input" type="text" th:field="*{countryEn}" placeholder="First Name"/></td>
+            <td><input class="input" type="text" th:field="*{countryEn}" placeholder="Continent En"/></td>
+            <td  th:if="${#fields.hasErrors('countryEn')}" th:errors="*{countryEn}" style="color: red">></td>
         </tr>
         <tr>
             <td>Country Pl</td>
-            <td><input class="input" type="text" th:field="*{countryPl}" placeholder="First Name"/></td>
+            <td><input class="input" type="text" th:field="*{countryPl}" placeholder="Continent Pl"/></td>
+            <td  th:if="${#fields.hasErrors('countryPl')}" th:errors="*{countryPl}" style="color: red">></td>
         </tr>
         <tr>
             <td>Capital City</td>
-            <td><input class="input" type="text" th:field="*{capital_city}" placeholder="First Name"/></td>
+            <td><input class="input" type="text" th:field="*{capital_city}" placeholder="Capital City"/></td>
+            <td  th:if="${#fields.hasErrors('capital_city')}" th:errors="*{capital_city}" style="color: red">></td>
         </tr>
         <tr>
             <td>Alfa 2</td>
-            <td><input class="input" type="text" th:field="*{alfa_2}" placeholder="First Name"/></td>
+            <td><input class="input" type="text" th:field="*{alfa_2}" placeholder="ALFA 2"/></td>
+            <td  th:if="${#fields.hasErrors('alfa_2')}" th:errors="*{alfa_2}" style="color: red">></td>
         </tr>
         <tr>
             <td>Alfa 3</td>
-            <td><input class="input" type="text" th:field="*{alfa_3}" placeholder="First Name"/></td>
+            <td><input class="input" type="text" th:field="*{alfa_3}" placeholder="ALFA 3"/></td>
+            <td  th:if="${#fields.hasErrors('alfa_3')}" th:errors="*{alfa_3}" style="color: red">></td>
         </tr>
         <tr>
             <td>Numeric Code</td>
             <td><input class="input" type="text" th:field="*{numeric_code}" placeholder="First Name"/></td>
+            <td  th:if="${#fields.hasErrors('numeric_code')}" th:errors="*{numeric_code}" style="color: red">></td>
         </tr>
         <tr>
             <td>ISO Code</td>
@@ -55,16 +60,15 @@
         </tr>
         <tr>
             <td>Exist</td>
-            <td><input class="input" type="checkbox" th:field="*{exists}" placeholder="First Name"/></td>
+            <td><input class="input" type="checkbox" th:field="*{exists}" placeholder="Numeric Code"/></td>
         </tr>
         <tr>
             <td>Description</td>
             <td>
                 <div>
-                    <textarea class="input" th:field="*{description}" placeholder="First Name"></textarea>
+                    <textarea class="input" th:field="*{description}" placeholder="Description"></textarea>
                 </div>
             </td>
         </tr>
-
     </table>
 </header>
