--- a/src/main/resources/templates/country/new.html
+++ b/src/main/resources/templates/country/new.html
@@ -11,74 +11,7 @@
     <h1 style="text-align: center">COUNTRY NEW</h1>
 
     <form th:action="@{/country/new}" method="post" th:object="${countryForm}">
-        <table>
-            <tr>
-                <td>Id continent</td>
-                <td>
-                    <select th:field="*{continents.id}">
-                        <option value="">SELECT CONTINENT</option>
-                        <option th:each="continent : ${continents}"
-                                th:value="${continent.id}"
-                                th:text="${continent.continentPl}">
-                            Address
-                        </option>
-                    </select>
-                </td>
-                <td  th:if="${#fields.hasErrors('continents.id')}" th:errors="*{continents.id}" style="color: red"></td>
-            </tr>
-            <tr>
-                <td>Continent</td>
-                <td><input class="input" type="text" th:field="*{continent}" placeholder="Continent"/></td>
-            </tr>
-            <tr>
-                <td>Country En</td>
-                <td><input class="input" type="text" th:field="*{countryEn}" placeholder="Continent En"/></td>
-                <td  th:if="${#fields.hasErrors('countryEn')}" th:errors="*{countryEn}" style="color: red">></td>
-            </tr>
-            <tr>
-                <td>Country Pl</td>
-                <td><input class="input" type="text" th:field="*{countryPl}" placeholder="Continent Pl"/></td>
-                <td  th:if="${#fields.hasErrors('countryPl')}" th:errors="*{countryPl}" style="color: red">></td>
-            </tr>
-            <tr>
-                <td>Capital City</td>
-                <td><input class="input" type="text" th:field="*{capital_city}" placeholder="Capital City"/></td>
-                <td  th:if="${#fields.hasErrors('capital_city')}" th:errors="*{capital_city}" style="color: red">></td>
-            </tr>
-            <tr>
-                <td>Alfa 2</td>
-                <td><input class="input" type="text" th:field="*{alfa_2}" placeholder="ALFA 2"/></td>
-                <td  th:if="${#fields.hasErrors('alfa_2')}" th:errors="*{alfa_2}" style="color: red">></td>
-            </tr>
-            <tr>
-                <td>Alfa 3</td>
-                <td><input class="input" type="text" th:field="*{alfa_3}" placeholder="ALFA 3"/></td>
-                <td  th:if="${#fields.hasErrors('alfa_3')}" th:errors="*{alfa_3}" style="color: red">></td>
-            </tr>
-            <tr>
-                <td>Numeric Code</td>
-                <td><input class="input" type="text" th:field="*{numeric_code}" placeholder="First Name"/></td>
-                <td  th:if="${#fields.hasErrors('numeric_code')}" th:errors="*{numeric_code}" style="color: red">></td>
-            </tr>
-            <tr>
-                <td>ISO Code</td>
-                <td><input class="input" type="text" th:field="*{iso_code}" placeholder="First Name"/></td>
-            </tr>
-            <tr>
-                <td>Exist</td>
-                <td><input class="input" type="checkbox" th:field="*{exists}" placeholder="Numeric Code"/></td>
-            </tr>
-            <tr>
-                <td>Description</td>
-                <td>
-                    <div>
-                        <textarea class="input" th:field="*{description}" placeholder="Description"></textarea>
-                    </div>
-                </td>
-            </tr>
-
-        </table>
-
+        <div th:replace="country/_form :: form"></div>
         <p> <input type="submit" value="Dodaj" class="btn btn-sm btn-primary"></p>
     </form>
 
