--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -26,6 +26,7 @@
 <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
                         <a class="dropdown-item" th:href="@{/continent}">Kontynenty</a>
                         <a class="dropdown-item" th:href="@{/country}">Państwa</a>
+                        <a class="dropdown-item" th:href="@{/currency}">Currency</a>
                         <a class="dropdown-item" th:href="@{/test}">TEST</a>
 
                     </div>
@@ -37,7 +38,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <!--                        <a class="dropdown-item" th:href="@{/country}">Continent</a>-->
                         <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
-                        <a class="dropdown-item" th:href="@{/currency}">New Note</a>
+                        <a class="dropdown-item" htef="#">New Note</a>
 
                     </div>
                 </li>
