--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -42,6 +42,17 @@
 
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        Seting
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <!--                        <a class="dropdown-item" th:href="@{/country}">Continent</a>-->
+                        <!--                        <a class="dropdown-item" th:href="@{/country/new}">Dodaj Państwo</a>                        <div class="dropdown-divider"></div>-->
+                        <a class="dropdown-item" th:href="@{/active}">Active</a>
+
+                    </div>
+                </li>
 <!--                <li class="nav-item">-->
 <!--                    <a class="nav-link disabled">Disabled</a>-->
 <!--                </li>-->
