--- a/src/main/resources/templates/active/index.html
+++ b/src/main/resources/templates/active/index.html
@@ -10,10 +10,32 @@
     <div layout:fragment="content" class="container">
     <h1 style="text-align: center">ACTIVE</h1>
         <a th:href="@{/active/new}" class="btn btn-sm btn-primary">Add new Active</a>
+        <table class="table table-striped table-bordered table-hover table-sm">
+            <thead class="thead-dark">
+            <tr>
+                <th>Lp:</th>
+                <th>Cod</th>
+                <th>Name</th>
+                <th>desctiption</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <Block th:each="active, i : ${activeDtos}">
+                <tr>
+                    <td th:text="${i.index + 1}"></td>
+                    <td th:text="${active.activeCod}"></td>
+                    <td th:text="${active.name}"></td>
+                    <td th:text="${active.description}"></td>
+                    <td>Będa akcje</td>
+                </tr>
+            </Block>
+            </tbody>
+        </table>
 
-            <lu th:each="active : ${activeDtos}">
-                <li th:text="${active}"></li>
-            </lu>
+<!--            <lu th:each="active : ${activeDtos}">-->
+<!--                <li th:text="${active}"></li>-->
+<!--            </lu>-->
     </div>
 </body>
 </html>
