--- a/src/main/resources/templates/active/index.html
+++ b/src/main/resources/templates/active/index.html
@@ -23,11 +23,13 @@
             <tbody>
             <Block th:each="active, i : ${activeDtos}">
                 <tr>
-                    <td th:text="${i.index + 1}"></td>
-                    <td th:text="${active.activeCod}"></td>
-                    <td th:text="${active.name}"></td>
-                    <td th:text="${active.description}"></td>
-                    <td>Będa akcje</td>
+                    <td th:text="${i.index + 1}" class="pt-1 pb-1"></td>
+                    <td th:text="${active.activeCod}" class="pt-1 pb-1"></td>
+                    <td th:text="${active.name}" class="pt-1 pb-1"></td>
+                    <td th:text="${active.description}" class="pt-1 pb-1"></td>
+                    <td class="pt-1 pb-1">
+                        <a th:href="@{'/active/edit/' + ${active.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
+                    </td>
                 </tr>
             </Block>
             </tbody>
