poprawki w edycji currency anego państwa

--- a/src/main/resources/templates/currency/edit.html
+++ b/src/main/resources/templates/currency/edit.html
@@ -10,10 +10,10 @@
 <div layout:fragment="content" class="container">
     <h1 style="text-align: center">CURRENCY EDIT</h1>
 
-<!--    <form th:action="@{/currency/edit}" method="post" th:object="${currencyForm}">-->
-<!--        <div th:replace="currency/_form :: form"></div>-->
-<!--        <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>-->
-<!--    </form>-->
+    <form th:action="@{/currency/edit}" method="post" th:object="${currencyForm}">
+        <div th:replace="currency/_form :: form"></div>
+        <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>
+    </form>
 
 </div>
 </body>
