--- a/src/main/resources/templates/fragments/_image-small.html
+++ b/src/main/resources/templates/fragments/_image-small.html
@@ -1,7 +1,7 @@
-<div th:fragment="note"
+<div th:fragment="image-small"
      xmlns:th="http://www.w3.org/1999/xhtml">
 
     <div style="float: left; padding: 5px; background: black">
-        <img th:src="${note}" style="max-width: 80px; min-height: 50px"/><br>
+        <img th:src="${image}" style="max-width: 80px; max-height: 80px"/><br>
     </div>
 </div>
