--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -61,16 +61,17 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <h2>OPIS</h2>
-            <textarea th:text="${note.description}" style="width: 100%; height: 100px; background: darkgray;" disable></textarea>
-        </div>
-        <div class="row row-cols-1 row-cols-sm-2" style="text-align: center">
-            <div class="col field" style="float: left">
-                <img th:src="${note.aversPath}" style="max-width: 400px; max-height: 350px"/>
-            </div>
-            <div class="col field" style="float: left">
-                <img th:src="${note.reversePath}" style="max-width: 400px; max-height: 350px"/>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                    <img th:src="${note.aversPath}" style="max-width: 100%; max-height: 350px"/>
+                </div>
+                <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+                    <img th:src="${note.reversePath}" style="max-width: 100%; max-height: 350px"/>
+                </div>
+
+            <div class="container col field" style="padding: 10px 10px 10px 10px">
+<!--                <h2>OPIS</h2>-->
+                <textarea th:text="${note.description}" style="width: 100%; height: 100%; background: darkgray;" disable></textarea>
             </div>
         </div>
 <!--        <div>-->
